--- a/main.css
+++ b/main.css
@@ -1,11 +1,34 @@
 body {
-    background: pink;
+    margin: 0;
+    display: flex;
+    justify-content: flex-end;
 }
 
-h1 {
-    color: blue;
+.sidebar {
+    width: 200px;
+    height: 100vh;
+    background: rgb(58, 58, 58);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
-p {
-    color: grey;
+.section {
+    margin-bottom: 50px;
+}
+
+.color {
+    color: white;
+}
+
+.item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.item:hover {
+    background: rgb(92, 92, 92);
 }
